# seispie

./: pyproject.toml  run_example.sh
examples/simple/: config.ini  generate_model.py
examples/spin/: config.ini  generate_model.py
scripts/: spplot
seispie/solver/: fdm.py
seispie/solver/fd2d/: __init__.py  cuda.py  fd2d.py  solver.py
seispie/solver/source/: ricker.py
