[project]
name = "seispie"
version = "0.0.2"
description = "2D finite difference solver"
readme = "README.md"
authors = [
  { name = "Congyue Cui", email = "ccui@princeton.edu" }
]
requires-python = ">=3.12"

dependencies = [
  "numba",
  "matplotlib",
  "scipy",
  "numpy"
]

[tool.uv]
package = false
